git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@78 9b274142-39a2-40f6-a478-1b104364ee40

--- a/src/main/README
+++ b/src/main/README
@@ -35,7 +35,7 @@
 
   To compile sample.cc, do:
 
-   g++ -o sample sample.cc -ldb_cxx -lmorfo -lfries -lomlet 
+   g++ -o sample sample.cc -ldb_cxx -lmorfo -lfries -lomlet -lpcre
 
   You may have to add -I and -L options with the right location of the berkeley DB
   libraries and headers. Also, you may have to add the paths where you installed 
