git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@80 9b274142-39a2-40f6-a478-1b104364ee40

--- a/src/utilities/ner/README
+++ b/src/utilities/ner/README
@@ -1,6 +1,6 @@
 
 
-  This directory contains information about how to train a NE Recognizer for FreeLing.
+  This directory contains information about how to train a NE classifier for FreeLing.
   Read the comments in the TRAIN.sh script.
 
   In fact, the libraries being used here is not FreeLing, but Omlet&Fries
