--- a/doc/userman/userman.tex
+++ b/doc/userman/userman.tex
@@ -421,7 +421,8 @@ Command line       & Configuration file   \\ \hline
 \end{tabular}
 
  Set the trace level (0:no trace - 3:maximum trace), for debugging purposes.
- Only valid if program was compiled with {\tt -DVERBOSE} flag.
+ Only valid if the library was compiled with {\tt -DVERBOSE} flag. 
+ Use {\tt ./configure --enable-traces} to achieve this.
 
 \item {\bf Trace Module}
 
